[gd_scene load_steps=2 format=3 uid="uid://jhmxejls61o4"]

[ext_resource type="Script" path="res://transformations/base_vehicle.gd" id="1_x0tcw"]

[node name="BaseVehicle" type="RigidBody2D"]
collision_layer = 2
continuous_cd = 1
script = ExtResource("1_x0tcw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="WaterDamageTimer" type="Timer" parent="."]

[connection signal="timeout" from="WaterDamageTimer" to="." method="_on_water_damage_timer_timeout"]
